[package]
name = "nbor"
version = "0.1.0"
authors = ["Miles Frankel <miles.frankel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
# generic-array = "0.14"
terminal_size = "0.1"
# ringbuf = "0.2"
ctrlc = "3.1"
